SourceMetaData/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Goal Process</fullName>
        <description>A support process for  the Goal record type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Draft</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>SLA Breached</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Active_SLA__c</fullName>
        <description>A list of the current active SLAs that can be applied to this record</description>
        <inlineHelpText>A list of the current active SLAs that can be applied to this record</inlineHelpText>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>2 Working Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Working Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Working Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 Working Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40 Working Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40 Calendar Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Working Days (1 Day Escalation)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreed_to_TandC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirmation that T&amp;C have been read out to the customer and accepted</description>
        <inlineHelpText>I have read out all attached Terms and Conditions and customer has confirmed that they accept T&amp;C</inlineHelpText>
        <label>Attached T&amp;C explained and accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anonymous_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if customer&apos;s name is unknown</inlineHelpText>
        <label>Anonymous Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC_Case_Type__c</fullName>
        <description>What does the customer want to achieve?</description>
        <inlineHelpText>What does the customer want to achieve?</inlineHelpText>
        <label>CSC Case Type</label>
        <picklist>
            <controllingField>Service_Area__c</controllingField>
            <picklistValues>
                <fullName>Not Specified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Agresso Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queries and Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICT Helpdesk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSC_Top_Enquiries__c</fullName>
        <description>The most frequent customer enquiries</description>
        <inlineHelpText>The most frequent customer enquiries</inlineHelpText>
        <label>CSC Top Enquiries</label>
        <picklist>
            <picklistValues>
                <fullName>New Starter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Transfer Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Enquiry No 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Enquiry No 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Enquiry No 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Enquiry No 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calendar_Days_Elapsed__c</fullName>
        <description>Number of calendar days when Goal was open or escalated</description>
        <inlineHelpText>Number of calendar days when Goal was open or escalated</inlineHelpText>
        <label>Calendar Days Elapsed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Expected_Breach_Date__c</fullName>
        <label>Case Expected Breach Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Expected_Escalation_Date__c</fullName>
        <label>Case Expected Escalation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Origin of the Case</description>
        <inlineHelpText>The origin of the Case</inlineHelpText>
        <label>Case Interaction</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Summary__c</fullName>
        <description>Formula field which merges the non blank picklist and free text fields used to describe the case to provide a single, 1 line summary of the case.</description>
        <formula>CASE(
    $RecordType.Name,
    
    &quot;CSC&quot;,
    TEXT(Service_Area__c) +  IF(!ISBLANK(TEXT(CSC_Case_Type__c)),&quot; - &quot; + TEXT(CSC_Case_Type__c)+&quot;.&quot;,&quot;&quot;) +  IF(!ISBLANK( Goal_Free_Text__c ),&quot; &quot; + Goal_Free_Text__c,&quot;&quot;),  
    
    &quot;CCC&quot;, 
    IF (
	OR( ISBLANK(TEXT(Popular_Goals__c)),  CONTAINS(TEXT(Popular_Goals__c), &quot;Other&quot;) ) , 
        IF (
       	    ISBLANK(TEXT(Goal_Type__c )) ,
            IF (
                ISBLANK(Goal_Free_Text__c) , 
                IF(!ISBLANK(SuppliedEmail), &quot;&quot;, &quot;Unspecified&quot;),
                Goal_Free_Text__c 
            ), 
            TEXT(Goal_Type__c ) + IF(!ISBLANK(TEXT(Goal_Sub_Type__c)),&quot; - &quot; + TEXT(Goal_Sub_Type__c),&quot;&quot;)   
        ),       
        TEXT(Popular_Goals__c)
    ),

    &quot;Error&quot;
)</formula>
        <inlineHelpText>Formual field which merges the non blank picklist and free text fields used to describe the case to provide a single, 1 line summary of the case.</inlineHelpText>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>CASE(TEXT(Origin),
&quot;Email&quot;, IMAGE(&quot;https://eu2.salesforce.com/img/icon/mail16.png&quot;,&quot;&quot;,16,16) + &quot; Email&quot;,
&quot;Face-to-Face&quot;, IMAGE(&quot;https://eu2.salesforce.com/img/icon/people16.png&quot;,&quot;&quot;,16,16) + &quot; Face-to-Face&quot;,
&quot;F2F&quot;, IMAGE(&quot;https://eu2.salesforce.com/img/icon/people16.png&quot;,&quot;&quot;,16,16) + &quot; Face-to-Face&quot;,
&quot;Phone&quot;, IMAGE(&quot;https://eu2.salesforce.com/img/icon/phone16.png&quot;,&quot;&quot;,16,16) + &quot; Phone&quot;,
&quot;Letter&quot;, IMAGE(&quot;https://eu2.salesforce.com/img/icon/documents16.png&quot;,&quot;&quot;,16,16) + &quot; Letter&quot;,
&quot;Social Media&quot;, IMAGE(&quot;https://eu2.salesforce.com/img/icon/groups16.png&quot;,&quot;&quot;,16,16) + &quot; Social Media&quot;,
&quot;Web&quot;, IMAGE(&quot;https://eu2.salesforce.com/img/icon/custom51_100/globe16.png&quot;,&quot;&quot;,16,16) + &quot; Web&quot;,
&quot;Chatter&quot;, IMAGE(&quot;https://eu2.salesforce.com/img/icon/groups16.png&quot;,&quot;&quot;,16,16) + &quot; Chatter&quot;,
IMAGE(&quot;https://eu2.salesforce.com/img/icon/custom51_100/redcross16.png&quot;, &quot;&quot;,16,16) + &quot; No Channel&quot;)</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>The date that the case was closed (blank for open case)</description>
        <formula>DATEVALUE( ClosedDate )</formula>
        <inlineHelpText>Case was closed on this date (blank for not-closed cases)</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Centre_Action__c</fullName>
        <description>The action that the customer contact centre agent has performed</description>
        <inlineHelpText>The action that the customer contact centre agent has performed</inlineHelpText>
        <label>Contact Centre Action</label>
        <picklist>
            <controllingField>Specific_Service__c</controllingField>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Take Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Customer Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Correspondence_Address__c</fullName>
        <description>The primary address of the customer</description>
        <formula>SUBSTITUTE(Contact.Account.Current_Correspondence_Address__c,&apos;,&apos;,BR())</formula>
        <inlineHelpText>The primary address of the customer</inlineHelpText>
        <label>Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Flagged__c</fullName>
        <formula>IF(Contact.Account.Flagged__c, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Customer flagged&quot;),&quot;&quot;)</formula>
        <inlineHelpText>Is it a flagged customer?</inlineHelpText>
        <label>Customer Flagged</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Outside_of_Borough__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the requesting contact outside of LBH?</inlineHelpText>
        <label>Customer Outside of Borough</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continuous_Working_Days_on_Hold__c</fullName>
        <description>Number of continuous working days Case has been on Hold</description>
        <inlineHelpText>Number of continuous working days Case has been on Hold</inlineHelpText>
        <label>Continuous Working Days on Hold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>The date at which the case was created (either by agent or email service etc)</description>
        <formula>DATEVALUE( CreatedDate )</formula>
        <inlineHelpText>This goal was created on this date (either by agent or email service)</inlineHelpText>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Home_Phone__c</fullName>
        <formula>Contact.HomePhone</formula>
        <inlineHelpText>Customer&apos;s home phone number.</inlineHelpText>
        <label>Customer Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Work_Phone__c</fullName>
        <formula>Contact.OtherPhone</formula>
        <inlineHelpText>Customer&apos;s work phone number.</inlineHelpText>
        <label>Customer Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>The department to which the ticket relates to</description>
        <inlineHelpText>The department to which the ticket relates to</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Chief Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s and Adults&apos; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Resources</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Regeneration, Economic Development and Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Status__c</fullName>
        <description>Free text area to enter additional details about current status of the case.</description>
        <inlineHelpText>Free text area to enter additional details about current status of the case.</inlineHelpText>
        <label>Detailed Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <description>(Email Channel Only) The body of the email message.</description>
        <inlineHelpText>(Email Channel Only) The body of the email message.</inlineHelpText>
        <label>Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_From__c</fullName>
        <description>(Email Chanel Only) The email address that the message was sent from.</description>
        <inlineHelpText>(Email Chanel Only) The email address that the message was sent from.</inlineHelpText>
        <label>Email From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Reply_To__c</fullName>
        <description>(Email Chanel Only) The reply-to address of the inbound email</description>
        <inlineHelpText>(Email Chanel Only) The reply-to address of the inbound email</inlineHelpText>
        <label>Email Reply To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <description>The subject line of the customer email (only used for goals supplied via email)</description>
        <inlineHelpText>The subject line of the customer email (only used for goals supplied via email)</inlineHelpText>
        <label>Email Subject</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_To__c</fullName>
        <description>(Email Chanel Only) The email address that the message was sent to.</description>
        <inlineHelpText>(Email Chanel Only) The email address that the message was sent to.</inlineHelpText>
        <label>Email To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Free_Text__c</fullName>
        <description>A free text description of the case if none of the the drop down types are applicable</description>
        <inlineHelpText>Describe customer&apos;s aim (if not found in Top Enquiries or selected Other Sub type)</inlineHelpText>
        <label>Case Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Goal_Sub_Type__c</fullName>
        <description>What is customer&apos;s case relating to?</description>
        <inlineHelpText>What is customer&apos;s case relating to?</inlineHelpText>
        <label>Case Sub Type</label>
        <picklist>
            <controllingField>Goal_Type__c</controllingField>
            <picklistValues>
                <fullName>Council offices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPs/dentists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure centres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libraries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graffiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed bin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recycling container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking ticket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request a form/leaflet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pothole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bereavement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <description>The type of case that this record relates to.</description>
        <inlineHelpText>What does customer want to achieve? (Select Type and Sub-type if not found in Top Enquiries)</inlineHelpText>
        <label>Case Type</label>
        <picklist>
            <controllingField>Popular_Goals__c</controllingField>
            <picklistValues>
                <fullName>Find It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Say It</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsReopenGoal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Goal has been Reopened (via pressing the button). Doesn&apos;t need to be on the layout, used in Workflow</description>
        <inlineHelpText>Goal has been reopened</inlineHelpText>
        <label>Reopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opened_Date__c</fullName>
        <description>The date at which the case moved to the open state</description>
        <inlineHelpText>Goal status was changed to Open on this date</inlineHelpText>
        <label>Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Popular_Goals__c</fullName>
        <description>A list of popular goals that customers have</description>
        <inlineHelpText>The most frequent customers enquiries</inlineHelpText>
        <label>Top Enquiries</label>
        <picklist>
            <picklistValues>
                <fullName>Animal Warden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Badge/Freedom Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pest Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pollution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tidy Town</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waste Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other &gt;</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <inlineHelpText>How would the customer prefer to be contacted?</inlineHelpText>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>No Preference</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REP_Customer_Representative__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>If the customer is not representing themselves for this case who has reported this case on behalf of the customer</description>
        <inlineHelpText>If the customer is not representing themselves for this case who has reported this case on behalf of the customer</inlineHelpText>
        <label>Representative</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Representing Customers on Goals</relationshipLabel>
        <relationshipName>Representing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REP_Customer_Verification_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if customer consent to be represented has been received</description>
        <inlineHelpText>Checked if customer consent to be represented has been received</inlineHelpText>
        <label>Representation Consent Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REP_Customer_Verification_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if customer consent to be represented is required</description>
        <inlineHelpText>Checked if customer consent to be represented is required</inlineHelpText>
        <label>Representation Consent Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REP_Representative_Address__c</fullName>
        <description>The current correspondence address of the customer&apos;s representative</description>
        <formula>SUBSTITUTE(REP_Customer_Representative__r.Current_Correspondence_Address__c,&apos;,&apos;,BR())</formula>
        <inlineHelpText>The current correspondence address of the customer&apos;s representative</inlineHelpText>
        <label>Representative Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_Representative_Contact_Method__c</fullName>
        <description>The preferred contact method of the customers representative (as exprressed on the person account record)</description>
        <formula>TEXT(REP_Customer_Representative__r.Account.Person_Preferred_Contact_Method__c )</formula>
        <inlineHelpText>The preferred contact method of the customers representative (as exprressed on the person account record)</inlineHelpText>
        <label>Representative Contact Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_Representative_Email__c</fullName>
        <description>The current email address of the customer&apos;s representative</description>
        <formula>REP_Customer_Representative__r.Email</formula>
        <inlineHelpText>The current email address of the customer&apos;s representative</inlineHelpText>
        <label>Representative Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_Representative_Home_Phone__c</fullName>
        <description>Home phone of customer&apos;s representative</description>
        <formula>REP_Customer_Representative__r.HomePhone</formula>
        <inlineHelpText>Home phone of customer&apos;s representative</inlineHelpText>
        <label>Representative Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_Representative_Mobile_Phone__c</fullName>
        <description>The current mobile number of the customer&apos;s representative</description>
        <formula>REP_Customer_Representative__r.MobilePhone</formula>
        <inlineHelpText>The current mobile number of the customer&apos;s representative</inlineHelpText>
        <label>Representative Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_Representative_Type__c</fullName>
        <description>The type of record the customers representative record is. This may be different to the role that they are fulfilling on this specific case which is specified by the editable representative type drop-down.</description>
        <formula>TEXT(REP_Customer_Representative__r.Account.Type )</formula>
        <inlineHelpText>The type of record the customers representative record is. This may be different to the role that they are fulfilling on this specific case which is specified by the editable representative type drop-down.</inlineHelpText>
        <label>Representative Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_Representative_Used__c</fullName>
        <description>Checked if the customer was the origin of this Case, false if a third party originated the case on their behalf (eg Councillor) Default = checked</description>
        <formula>!ISBLANK( REP_Customer_Representative__c )</formula>
        <inlineHelpText>Checked if this Case opened by a third party on behalf of the customer</inlineHelpText>
        <label>Representative Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REP_Representative_Work_Phone__c</fullName>
        <description>Work phone for customer&apos;s representative</description>
        <formula>REP_Customer_Representative__r.OtherPhone</formula>
        <inlineHelpText>Work phone for customer&apos;s representative</inlineHelpText>
        <label>Representative Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Escalation__c</fullName>
        <description>The reason why the goal has been escalated</description>
        <inlineHelpText>The reason why the goal has been escalated</inlineHelpText>
        <label>Reason for Escalation</label>
        <picklist>
            <picklistValues>
                <fullName>SLA Breach Approaching (Auto)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticket Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reopen_Reason_Other__c</fullName>
        <description>Other reason for reopening the case</description>
        <inlineHelpText>Other reason for reopening the case</inlineHelpText>
        <label>Reopen Reason Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reopen_Reason__c</fullName>
        <description>The reason for reopening the Case</description>
        <inlineHelpText>The reason for reopening the Case</inlineHelpText>
        <label>Reopen Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Customer unhappy with initial response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for next stage resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reply_Sent_Date__c</fullName>
        <description>The date that the reply was sent to the customer by the service team.</description>
        <inlineHelpText>The date that the reply was sent to the customer by the service team.</inlineHelpText>
        <label>Reply Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Representative_Outside_of_Borough__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the representative from outside LBH?</inlineHelpText>
        <label>Representative Outside of Borough</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Representative_Type__c</fullName>
        <description>The type of the representative.</description>
        <inlineHelpText>The type of the representative.</inlineHelpText>
        <label>Representative Type</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Establishment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carer/Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carer/Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carer/Spouse/Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chair of Committees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizen&apos;s Advice Bureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Councillor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer&apos;s Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Leader of Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex-employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian Ad Litem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leader of the Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leader of the Opposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLA_Days_Remaining__c</fullName>
        <description>The number of days remaining until SLA deadline. Measured in working or calendar days depending on the SLA</description>
        <formula>IF ( ISPICKVAL(Status, &quot;Draft&quot;), 
null, 

IF( SLA__r.Working_Days__c = TRUE, 
SLA__r.SLA_Length_Days__c - Working_Days_Elapsed__c, 
SLA__r.SLA_Length_Days__c - Calendar_Days_Elapsed__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days remaining until SLA deadline. Measured in working or calendar days depending on the SLA.</inlineHelpText>
        <label>SLA Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>